# hexo-engine

./: Cargo.toml  README.md  default-benchmark.txt  pyproject.toml
.chainlink/: issues.db
benches/: engine.rs
docs/superpowers/plans/: 2026-03-30-phase0-game-engine.md  2026-03-30-phase1-gnn-architecture.md  2026-03-30-phase2-training-loop.md  2026-03-31-phase3-curriculum-learning.md  2026-03-31-phase3a-evaluation.md  2026-03-31-phase3b-lr-scheduling.md  2026-03-31-phase3c-curriculum.md  2026-03-31-phase3d-monitoring.md  2026-03-31-phase3e-rust-mcts.md
hexo-engine/: Cargo.toml
hexo-engine/src/: game.rs  lib.rs
hexo-mcts/: Cargo.toml
hexo-mcts/src/: axis_graph.rs  batch_tensors.rs  graph.rs  graph_tensors.rs  inference.rs  inference_subprocess.rs  lib.rs  python.rs
hexo-mcts/src/mcts/: batched.rs  batcher.rs  dedup_count.rs  gumbel_mcts.rs  halving.rs  mod.rs  node.rs  scoring.rs  select.rs  simulate.rs
src/: game.rs  hex.rs  legal_moves.rs  lib.rs  python.rs  win.rs
tests/: integration.rs  test_python.py
