[package]
name = "hexo-engine"
version = "0.1.0"
edition = "2024"

[features]
tui = ["crossterm", "ratatui"]

[dependencies]
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine"
harness = false

[[bin]]
name = "play"
required-features = ["tui"]
