[package]
name = "hexo-mcts"
version = "0.1.0"
edition = "2024"
authors = ["SootyOwl"]
description = "Gumbel AlphaZero MCTS for HeXO with GNN graph construction and PyO3 bindings"
license = "MIT"
repository = "https://github.com/SootyOwl/hexo-engine"
readme = "../README.md"
keywords = ["mcts", "alphazero", "gumbel", "hexagonal", "reinforcement-learning"]
categories = ["algorithms", "science"]

[lib]
name = "hexo_rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3"]

[dependencies]
hexo-engine = { path = "../hexo-engine" }
pyo3 = { version = "0.28", optional = true }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
