[package]
name = "hexo-mcts"
version = "0.1.0"
edition = "2024"
authors = ["SootyOwl"]
description = "Gumbel AlphaZero MCTS for HeXO with GNN graph construction and PyO3 bindings"
license = "MIT"
repository = "https://github.com/SootyOwl/hexo-engine"
readme = "../README.md"
keywords = ["mcts", "alphazero", "gumbel", "hexagonal", "game-ai"]
categories = ["algorithms", "science"]

[lib]
name = "hexo_rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3"]
torch = ["tch", "serde_json"]

[dependencies]
hexo-engine = { version = "0.1.0", path = "../hexo-engine" }
pyo3 = { version = "0.28", optional = true }
tch = { version = "0.18", optional = true }
serde_json = { version = "1", optional = true }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"

[[bin]]
name = "self_play"
required-features = ["torch"]
